@@ -1,5 +1,12 @@
 2017-10-16  Bruno Haible  <bruno@clisp.org>
 
+	Avoid a crash of the highest bit number test on Linux/arm.
+	* m4/mmap.m4 (CL_MMAP): On arm systems, test address 0x41000000 instead
+	of address 0x40000000.
+	* aclocal.m4, src/configure: Regenerated.
+
+2017-10-16  Bruno Haible  <bruno@clisp.org>
+
 	Avoid another risky optimization when --enable-portability is enabled.
 	* lispbibl.d: When NO_SYMBOLFLAGS is defined, don't use symbolflags.
 	* makemake.in (XCFLAGS): Add -DNO_SYMBOLFLAGS if --enable-portability
